Refocus README on Java 25 features as primary use case
Restructure README to lead with Java 25 language features as the primary
use case, with API testing as a secondary capability. Content reorganized
to emphasize:

1. Virtual Threads - chaos/concurrent testing with lightweight threads
2. Records - immutable DTOs eliminating boilerplate
3. Sealed Interfaces + Pattern Matching - exhaustive type checking
4. Text Blocks - readable multi-line HTML/JSON strings
5. Switch Expressions - functional, exhaustive, no default needed
6. SequencedCollections - intent-clear first/last access
7. Var Type Inference - less verbose declarations
8. Optional - explicit null handling

Each section includes:
- Problem statement (why this matters)
- Solution explanation
- DocTest code example with sayAndMakeRequest()
- Generated documentation details
- Link to actual test file

Validation:
- 13/13 DocTesterChaosTest tests pass (virtual threads ✓)
- 7/7 Java25DocTest tests pass (all Java 25 features ✓)
- HTML documentation generated with all 7 feature sections

This emphasizes that DocTester is fundamentally a Java 25 testing framework,
not just an HTTP testing library.

https://claude.ai/code/session_01CtZhT9fCEVir3L8M2eGAZV