@@ -1,673 +1,728 @@
-# DocTester — Living API Documentation
+# DocTester — Java 25 Testing & Living Documentation
 
-DocTester is a Java testing framework that generates **Bootstrap-styled HTML documentation while running JUnit tests**. It bridges the gap between testing and documentation by making them inseparable — your docs stay in sync because they *are* your tests.
+DocTester is a **Java 25+ testing framework** that generates Bootstrap-styled HTML documentation while running JUnit tests. It's designed from the ground up to showcase modern Java language features—records, sealed classes, virtual threads, pattern matching, and more—while automatically documenting your APIs and behavior.
+
+**Key insight:** Your tests are your documentation. Every time your tests run, your docs regenerate from live execution.
 
 [![Build Status](https://api.travis-ci.org/r10r-org/doctester.svg)](https://travis-ci.org/r10r-org/doctester)
 
 **Current version:** `1.1.12-SNAPSHOT`
 **License:** Apache 2.0
 **Maven coordinates:** `org.r10r:doctester-core`
+**Java requirement:** Java 25 LTS with `--enable-preview`
 
 ---
 
-## What is DocTester?
+## Why Java 25 First?
 
-DocTester solves a fundamental problem: **documentation gets outdated**. You change your API, update your tests, but documentation lags behind—becoming misleading or wrong.
+DocTester is written for **Java 25 developers**. Modern Java idioms make tests clearer:
 
-DocTester's solution: write tests **and** documentation **simultaneously**. Every time your tests run, your documentation is regenerated from live test execution. If your tests pass, your docs are correct.
+- **Records** eliminate boilerplate for request/response DTOs
+- **Sealed classes** + **pattern matching** express type hierarchies precisely
+- **Virtual threads** enable chaos testing and concurrent scenarios without OS threads
+- **Text blocks** make multi-line strings (HTML, JSON) readable
+- **Switch expressions** are exhaustive—the compiler ensures all cases are covered
+- **SequencedCollections** and **Optional** reduce null-pointer bugs
 
-### Key Principles
-- Tests **are** documentation — not separate artifacts
-- HTML docs generated **during** test execution
-- Bootstrap 3 styling out-of-the-box
-- Fluent Java API following Hamcrest conventions
-- Works with any JUnit 4 test framework (Ninja, Arquillian, servlet containers, embedded servers, etc.)
+This README shows you how to **leverage these features in your DocTests**.
 
 ---
 
-## Comprehensive DocTest Types
+## Java 25 Features in DocTester
 
-DocTester can document and test **all of the following scenarios**. Each type is shown with live examples from the integration test suite:
+### 1. Virtual Threads — Chaos Testing Without Thread Pools
 
-### 1. **REST/HTTP API Tests** (JSON & XML)
+**Problem:** Testing a service under concurrent load typically requires OS thread pools, which exhaust quickly.
 
-Document REST endpoints with automatic request/response capture:
+**Solution:** Java 25 virtual threads are lightweight; spawn thousands without resource exhaustion.
 
 ```java
 @Test
-public void testJsonApi() {
-    sayNextSection("Listing Articles (JSON GET)");
-    say("GET /api/users returns all users as JSON.");
+@DisplayName("Concurrent requests: 20 virtual threads, chaos injection")
+void concurrentChaosWithVirtualThreads() throws InterruptedException {
+    int numThreads = 20;
+    AtomicInteger successes = new AtomicInteger(0);
+    CountDownLatch latch = new CountDownLatch(numThreads);
 
-    Response response = sayAndMakeRequest(
-        Request.GET()
-            .url(testServerUrl().path("/api/users")));
+    // Java 25: single Executors call, no OS thread limits
+    try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+        for (int i = 0; i < numThreads; i++) {
+            final int idx = i;
+            executor.submit(() -> {
+                try {
+                    // Each virtual thread has its own TestBrowserImpl
+                    var browser = new TestBrowserImpl();
+                    if (idx % 2 == 0) {
+                        Response r = browser.makeRequest(
+                            Request.GET().url(testServerUrl().path("/ok/" + idx)));
+                        if (r.httpStatus == 200) successes.incrementAndGet();
+                    }
+                } finally {
+                    latch.countDown();
+                }
+            });
+        }
+    }
 
-    sayAndAssertThat("Status is 200",
-        response.httpStatus(), equalTo(200));
+    latch.await(10, TimeUnit.SECONDS);
+
+    sayAndAssertThat("All 10 concurrent requests succeeded",
+        successes.get(), equalTo(10));
 }
 ```
 
-**Generates:**
-- Request panel (method, URL, headers, cookies)
-- Response panel (status, headers, formatted JSON payload)
+**Documentation generated:**
+- Test name and display name
 - Assertion result (green/red box)
+- Total execution time
+- Virtual thread behavior details
 
-**See:** `doctester-integration-test/src/test/java/controllers/docs/JsonApiDocTest.java`
+**See:** `DocTesterChaosTest.java` (concurrentChaosWithVirtualThreads test)
 
 ---
 
-### 2. **XML API Tests**
+### 2. Records — Immutable DTOs, Zero Boilerplate
 
-Full support for XML serialization/deserialization with pretty-printed output:
+**Problem:** Request/response payloads require getters, setters, constructors, equals, hashCode, toString.
+
+**Solution:** Records are one-liners.
 
 ```java
-@Test
-public void testXmlEndpoint() {
-    Response response = sayAndMakeRequest(
-        Request.GET()
-            .url(testServerUrl().path("/api/articles.xml")));
-
-    ArticlesDto dto = response.payloadAs(ArticlesDto.class);
-    sayAndAssertThat("3 articles returned",
-        dto.articles.size(), equalTo(3));
+// Before (verbose, mutable, error-prone)
+public class ArticleDto {
+    private String title;
+    private String content;
+    public ArticleDto() {}
+    public ArticleDto(String title, String content) { ... }
+    public String getTitle() { return title; }
+    public void setTitle(String title) { this.title = title; }
+    // ... more boilerplate
 }
+
+// After (Java 25 record — immutable, canonical)
+record ArticleRecord(String title, String content) {}
 ```
 
-**Features:**
-- Automatic XML detection via Content-Type header
-- Jackson XmlMapper deserialization
-- Pretty-printed XML in response panel
-- Mixed JSON/XML format comparison
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/XmlApiDocTest.java`
-
----
-
-### 3. **HTTP Method Tests** (GET, POST, PUT, PATCH, DELETE, HEAD)
-
-All standard HTTP methods fully supported:
-
-```java
-// GET
-Request.GET().url(...)
-
-// POST with payload
-Request.POST()
-    .url(...)
-    .contentTypeApplicationJson()
-    .payload(myDto)
-
-// PUT
-Request.PUT().url(...)
-
-// PATCH
-Request.PATCH().url(...)
-
-// DELETE
-Request.DELETE().url(...)
-
-// HEAD
-Request.HEAD().url(...)
-```
-
-**Documented:** Each method generates its own request panel showing method, URL, headers.
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/HttpMethodsDocTest.java`
-
----
-
-### 4. **Query Parameters**
-
-Document endpoints with dynamic query strings:
+**In a DocTest:**
 
 ```java
 @Test
-public void testSearchWithQueryParams() {
-    Response response = sayAndMakeRequest(
-        Request.GET()
-            .url(testServerUrl()
-                .path("/api/users")
-                .addQueryParameter("search", "John")
-                .addQueryParameter("role", "admin")));
+public void testRecordPayloads() {
+    sayNextSection("Records as Request Payload Types");
 
-    sayAndAssertThat("Results include admins", ...);
-}
-```
+    say("Java 25 records work directly with Jackson 2.12+ serialization:");
 
-**Generates:** URL with query string in request panel.
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/QueryParametersDocTest.java`
-
----
-
-### 5. **Form Submissions**
-
-Document form-based endpoints with `application/x-www-form-urlencoded`:
-
-```java
-@Test
-public void testLoginForm() {
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/login"))
-            .addFormParameter("username", "alice@example.com")
-            .addFormParameter("password", "secret"));
-
-    sayAndAssertThat("Login succeeds",
-        response.httpStatus(), equalTo(200));
-}
-```
-
-**Features:**
-- Multiple form parameters
-- Automatic Content-Type header: `application/x-www-form-urlencoded`
-- Form parameters visible in request panel
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/AuthenticationDocTest.java`
-
----
-
-### 6. **File Uploads** (Multipart/Form-Data)
-
-Document multipart file upload endpoints:
-
-```java
-@Test
-public void testFileUpload() throws IOException {
-    File document = new File("src/test/resources/report.pdf");
+    // Create a record payload
+    var payload = new ArticleRecord("My Title", "My Content");
 
     Response response = sayAndMakeRequest(
         Request.POST()
-            .url(testServerUrl().path("/api/documents"))
-            .addFormParameter("title", "Q4 Report")
-            .addFileToUpload("file", document));
+            .url(testServerUrl().path("/api/articles"))
+            .contentTypeApplicationJson()
+            .payload(payload));  // Jackson serializes the record
 
-    sayAndAssertThat("Uploaded successfully",
+    sayAndAssertThat("Article created with record payload",
         response.httpStatus(), equalTo(201));
 }
 ```
 
-**Features:**
-- Single or multiple file uploads
-- Mix files with form parameters
-- Automatic `multipart/form-data` boundary detection
-- Request panel shows Content-Type with boundary
+**Benefits:**
+- No null-pointer bugs (immutable, final fields)
+- Compact code (100 lines → 1 line)
+- Documentation is in the record signature
 
-**See:** `doctester-integration-test/src/test/java/controllers/docs/FileUploadDocTest.java`
+**See:** `Java25DocTest.java` (testRecordPayloads test)
 
 ---
 
-### 7. **Authentication & Session Cookies**
+### 3. Sealed Interfaces & Exhaustive Pattern Matching
 
-Document session-based authentication flows:
+**Problem:** API results can succeed or fail, but you might forget to handle a case, or add a new case and forget all the switch statements.
+
+**Solution:** Sealed hierarchies + pattern matching force compiler exhaustiveness checking.
 
 ```java
-@Test
-public void testAuthenticatedFlow() {
-    // Login
-    makeRequest(  // silent login, don't document
-        Request.POST()
-            .url(testServerUrl().path("/login"))
-            .addFormParameter("username", "bob@gmail.com")
-            .addFormParameter("password", "secret"));
-
-    // Subsequent requests auto-include session cookie
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(newArticle));
-
-    sayAndAssertThat("Authenticated write succeeds",
-        response.httpStatus(), equalTo(200));
+// Define a sealed result type — only Ok and Err are allowed
+sealed interface ApiResult<T> permits ApiResult.Ok, ApiResult.Err {
+    record Ok<T>(int status, T body) implements ApiResult<T> {}
+    record Err<T>(int status, String reason) implements ApiResult<T> {}
 }
 ```
 
-**Features:**
-- Automatic cookie jar management
-- Cookies persist across requests within same @Test method
-- `sayAndGetCookies()` to document all cookies
-- `sayAndGetCookieWithName(String)` to extract specific cookies
-- Per-test-method isolation (no cookie leakage between tests)
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/AuthenticationDocTest.java`
-
----
-
-### 8. **Error & Exception Handling**
-
-Document error responses and HTTP status codes:
+**In a DocTest:**
 
 ```java
 @Test
-public void testErrorResponse() {
-    // Test 403 Forbidden
-    Response forbidden = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(article));
+public void testSealedInterfacesAndSwitchExpressions() {
+    sayNextSection("Sealed Interfaces and Exhaustive Switch Expressions");
 
-    sayAndAssertThat("Unauthenticated write returns 403",
-        forbidden.httpStatus(), equalTo(403));
+    Response raw = sayAndMakeRequest(
+        Request.GET().url(testServerUrl().path("/api/articles")));
 
-    // Test 404 Not Found
-    Response notFound = sayAndMakeRequest(
-        Request.GET()
-            .url(testServerUrl().path("/api/nonexistent")));
+    // Map to sealed type
+    ApiResult<ArticlesDto> result = raw.httpStatus == 200
+        ? new ApiResult.Ok<>(raw.httpStatus, raw.payloadAs(ArticlesDto.class))
+        : new ApiResult.Err<>(raw.httpStatus, raw.payloadAsString());
 
-    sayAndAssertThat("Unknown endpoint returns 404",
-        notFound.httpStatus(), equalTo(404));
+    // Exhaustive switch: compiler ensures all cases are covered
+    String summary = switch (result) {
+        case ApiResult.Ok<ArticlesDto> ok ->
+            "Fetched %d articles (HTTP %d)".formatted(ok.status(), ok.body().articles.size());
+        case ApiResult.Err<ArticlesDto> err ->
+            "Failed: HTTP %d: %s".formatted(err.status(), err.reason());
+        // No 'default' needed — compiler verifies completeness
+    };
 
-    // Test 204 No Content
-    Response deleted = sayAndMakeRequest(
-        Request.DELETE()
-            .url(testServerUrl().path("/api/article/123")));
+    say("Result: " + summary);
 
-    sayAndAssertThat("Successful delete returns 204",
-        deleted.httpStatus(), equalTo(204));
+    sayAndAssertThat("Result matches expected",
+        summary, equalTo("Fetched 3 articles (HTTP 200)"));
 }
 ```
 
-**Features:**
-- Error responses documented same as successes
-- Request and response panels appear regardless of status
-- Clear visual documentation of error codes
-- Response body (if any) included in panel
+**Benefits:**
+- Compiler catches missing cases at compile time
+- New result types force updates to all switch statements
+- Clear, readable, exhaustive logic
 
-**See:** `doctester-integration-test/src/test/java/controllers/docs/ErrorHandlingDocTest.java`
-
----
-
-### 9. **Payload Serialization (JSON & XML)**
-
-Document DTOs and payloads with automatic serialization:
-
-```java
-@Test
-public void testJsonPayload() {
-    ArticleDto article = new ArticleDto();
-    article.title = "Introduction to DocTester";
-    article.content = "Framework for living documentation...";
-
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(article));  // Auto-serialized to JSON
-}
-```
-
-**Deserialization:**
-```java
-// Auto-detect JSON/XML from Content-Type
-ArticleDto single = response.payloadAs(ArticleDto.class);
-
-// Explicit JSON with TypeReference
-List<ArticleDto> list = response.payloadJsonAs(
-    new TypeReference<List<ArticleDto>>() {});
-
-// Explicit XML
-ArticleDto fromXml = response.payloadXmlAs(ArticleDto.class);
-```
-
-**Features:**
-- Jackson integration (JSON + XML)
-- Automatic Content-Type detection
-- Pretty-printed payload in response panel
-- Full deserialization support
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/JsonApiDocTest.java`
+**See:** `Java25DocTest.java` (testSealedInterfacesAndSwitchExpressions test)
 
 ---
 
-### 10. **Narrative Documentation with Paragraphs**
+### 4. Text Blocks — Readable Multi-Line Strings
 
-Describe context and reasoning in natural language:
+**Problem:** Building HTML, JSON, or SQL with string concatenation is hard to read and maintain.
 
-```java
-@Test
-public void testArticleWorkflow() {
-    sayNextSection("Complete Article Workflow");
-
-    say("Articles can only be modified by their author or by administrators. "
-        + "This test demonstrates the typical workflow: "
-        + "login, create, verify, and then update.");
-
-    say("First, we authenticate by sending credentials to /login:");
-
-    Response loginResponse = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/login"))
-            .addFormParameter("username", "alice@example.com")
-            .addFormParameter("password", "secret"));
-
-    say("After login, the server sets an HTTP-only session cookie. "
-        + "This cookie is automatically stored and included in subsequent requests.");
-
-    // ... more requests
-}
-```
-
-**Features:**
-- Prose explaining API behavior
-- Readable documentation for non-technical users
-- Mixes with request/response panels for context
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/DocumentationNarrativeDocTest.java`
-
----
-
-### 11. **HTML Content & Tables**
-
-Embed raw HTML for custom documentation:
+**Solution:** Text blocks (""") preserve formatting and eliminate escape sequences.
 
 ```java
-@Test
-public void documentFieldStructure() {
-    sayRaw("""
-        <table class="table table-bordered table-condensed">
-          <thead><tr><th>Field</th><th>Type</th><th>Description</th></tr></thead>
-          <tbody>
-            <tr><td>id</td>      <td>number</td><td>Auto-assigned identifier</td></tr>
-            <tr><td>title</td>   <td>string</td><td>Article headline</td></tr>
-            <tr><td>content</td> <td>string</td><td>Body text</td></tr>
-            <tr><td>postedAt</td><td>number</td><td>Unix timestamp (ms)</td></tr>
-          </tbody>
-        </table>
-        """);
-}
-```
+// Before: concatenation noise
+say("The following endpoints are available: "
+    + "GET /api/users (list), "
+    + "POST /api/users (create), "
+    + "DELETE /api/users/{id} (delete)");
 
-**Features:**
-- Raw HTML pass-through (`sayRaw()`)
-- Bootstrap CSS classes available
-- Useful for schemas, field descriptions, matrices
-- Code blocks with syntax highlighting
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/JsonApiDocTest.java`
-
----
-
-### 12. **Code Examples (with Syntax Highlighting)**
-
-Display code snippets:
-
-```java
+// After: readable text block
 sayRaw("""
-    <pre><code class="language-java">
-    ArticleDto article = new ArticleDto();
-    article.title = "Title";
-
-    Response response = sayAndMakeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/api/articles"))
-            .contentTypeApplicationJson()
-            .payload(article));
-    </code></pre>
+    <div class="alert alert-info">
+      <strong>API Endpoints</strong>
+      <ul>
+        <li><code>GET /api/users</code> — list (public)</li>
+        <li><code>POST /api/users</code> — create (authenticated)</li>
+        <li><code>DELETE /api/users/{id}</code> — delete (admin)</li>
+      </ul>
+    </div>
     """);
 ```
 
-**Features:**
-- HTML-escaped code blocks
-- Language hints for syntax highlighting
-- Embedded in generated documentation
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/FileUploadDocTest.java`
-
----
-
-### 13. **Assertion Visualization (Green/Red Boxes)**
-
-Visual assertion results in HTML:
+**In a DocTest:**
 
 ```java
 @Test
-public void testAssertions() {
-    Response response = sayAndMakeRequest(
-        Request.GET().url(testServerUrl().path("/api/users")));
+public void testTextBlocksForNarrative() {
+    sayNextSection("Text Blocks for Cleaner HTML Narrative");
 
-    // Green box if assertion passes
-    sayAndAssertThat("Status is 200 OK",
-        response.httpStatus(), equalTo(200));
+    say("Java text blocks (\"\"\"...\"\"\") eliminate string concatenation noise:");
 
-    // Message with reason (shows both)
-    sayAndAssertThat("User count correct",
-        "Expected at least 1 user",
-        userList.size(), greaterThan(0));
-}
-```
+    sayRaw("""
+        <table class="table table-striped">
+          <thead>
+            <tr><th>Method</th><th>Endpoint</th><th>Auth</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>GET</td><td>/api/articles</td><td>No</td></tr>
+            <tr><td>POST</td><td>/api/articles</td><td>Yes</td></tr>
+            <tr><td>DELETE</td><td>/api/articles/{id}</td><td>Admin</td></tr>
+          </tbody>
+        </table>
+        """);
 
-**Generates:**
-- **Green box** for passing assertions
-- **Red box** for failing assertions (test fails)
-- Message and reason both displayed
-- Hamcrest matchers fully supported
-
-**See:** All DocTest examples use this
-
----
-
-### 14. **Annotation-Based Documentation**
-
-Declare documentation purely via annotations (no method calls):
-
-```java
-@DocSection("Creating Users")
-@DocDescription({
-    "POST /api/users creates a new user.",
-    "The request body must contain 'username' and 'email' fields.",
-    "Returns 201 Created with the new user in the response body."
-})
-@DocNote({
-    "Usernames must be unique.",
-    "Email validation happens server-side."
-})
-@DocWarning({
-    "Do NOT send passwords in the request body.",
-    "Use OAuth 2.0 token exchange instead."
-})
-@DocCode(value = {
-    "UserDto user = new UserDto(\"alice\", \"alice@example.com\");",
-    "Response response = sayAndMakeRequest(",
-    "    Request.POST()",
-    "        .url(testServerUrl().path(\"/api/users\"))",
-    "        .payload(user));"
-}, language = "java")
-@Test
-public void testCreateUser() {
-    // Test code here - annotations provide structure
-}
-```
-
-**Features:**
-- `@DocSection` — section heading
-- `@DocDescription` — narrative paragraphs
-- `@DocNote` — info callout boxes (blue)
-- `@DocWarning` — warning callout boxes (yellow)
-- `@DocCode` — syntax-highlighted code blocks
-- All optional and independent
-- Annotations processed automatically
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/Java25DocTest.java`
-
----
-
-### 15. **Access Control & Role-Based Tests**
-
-Document authorization and permission scenarios:
-
-```java
-@Test
-public void testRoleBasedAccess() {
-    // Login as regular user
-    makeRequest(
-        Request.POST()
-            .url(testServerUrl().path("/login"))
-            .addFormParameter("username", "alice@example.com")
-            .addFormParameter("password", "secret"));
-
-    // Attempt admin-only operation
-    Response response = sayAndMakeRequest(
-        Request.DELETE()
-            .url(testServerUrl().path("/api/users/123")));
-
-    sayAndAssertThat("Non-admin user denied access",
-        response.httpStatus(), equalTo(403));
-
-    say("Admin users can perform the same operation:");
-    // ... demonstrate with admin credentials
-}
-```
-
-**Features:**
-- Test multiple user roles
-- Document permission errors
-- Show access control boundaries
-- Cross-request authentication state
-
-**See:** `doctester-integration-test/src/test/java/controllers/docs/AccessControlDocTest.java`
-
----
-
-### 16. **Integration with Web Frameworks**
-
-Out-of-the-box support for framework-specific server setup:
-
-**Ninja Framework:**
-```java
-public class MyApiDocTest extends NinjaApiDoctester {
-    // Server starts automatically
-    // testServerUrl() returns embedded Jetty URL
-}
-```
-
-**Arquillian/JBoss:**
-```java
-@RunWith(Arquillian.class)
-@RunAsClient
-public class MyApiDocTest extends DocTester {
-    @ArquillianResource
-    private URL baseUrl;
-
-    @Override
-    public Url testServerUrl() {
-        return Url.host(baseUrl.toURI().toString());
-    }
-}
-```
-
-**Custom Servers:**
-```java
-public class MyServerDocTest extends DocTester {
-    @Override
-    public Url testServerUrl() {
-        return Url.host("http://my-custom-server:8080");
-    }
-}
-```
-
-**See:** `doctester-integration-test/src/test/java/controllers/utils/NinjaApiDoctester.java`
-
----
-
-### 17. **Request/Response Inspection**
-
-Inspect and validate response components:
-
-```java
-@Test
-public void testResponseInspection() {
     Response response = sayAndMakeRequest(
         Request.GET().url(testServerUrl().path("/api/articles")));
 
-    // Status code
-    int status = response.httpStatus();
-
-    // Raw body
-    byte[] rawBytes = response.payload();
-
-    // As string
-    String body = response.payloadAsString();
-
-    // Deserialized
-    Article article = response.payloadAs(Article.class);
-
-    // Pretty-printed
-    String formatted = response.payloadAsPrettyString();
-
-    // Headers
-    Map<String, String> headers = response.headers();
-    String contentType = headers.get("Content-Type");
+    sayAndAssertThat("Endpoint live", response.httpStatus(), equalTo(200));
 }
 ```
 
+**Benefits:**
+- HTML, JSON, SQL are readable as-is
+- No escape sequences (`\"` becomes just `"`)
+- Formatting is preserved
+
+**See:** `Java25DocTest.java` (testTextBlocksForNarrative test)
+
 ---
 
-### 18. **Multiple Scenarios & Workflows**
+### 5. Pattern Matching — No More Explicit Casts
 
-Chain multiple requests to document complete workflows:
+**Problem:** Extract data from a response, check types, and cast — verbose and error-prone.
+
+**Solution:** Pattern matching combines type check and extraction in one expression.
+
+```java
+// Before: explicit cast
+if (response instanceof HttpResponse) {
+    HttpResponse http = (HttpResponse) response;
+    if (http.getStatus() == 200) {
+        String body = http.getBody();
+        // use body
+    }
+}
+
+// After: pattern matching (single expression, no redundant variable)
+if (response instanceof HttpResponse http && http.getStatus() == 200) {
+    String body = http.getBody();
+    // use body
+}
+```
+
+**Record pattern deconstruction:**
+
+```java
+record ArticleView(long id, String title) {}
+
+// Deconstruct a record in a switch
+ArticleView view = new ArticleView(1L, "Long Article Title Here");
+
+String label = switch (view) {
+    case ArticleView(var id, var title) when title.length() > 20 ->
+        "long-title #" + id;
+    case ArticleView(var id, var _) ->  // _ = unnamed pattern, ignore title
+        "short-title #" + id;
+};
+```
+
+**In a DocTest:**
 
 ```java
 @Test
-public void testCompleteUserJourney() {
-    // Step 1: Create account
-    sayNextSection("Step 1: User Registration");
-    Response signup = sayAndMakeRequest(...);
+public void testPatternMatchingAndRecordPatterns() {
+    sayNextSection("Pattern Matching and Record Patterns");
 
-    // Step 2: Login
-    sayNextSection("Step 2: Authentication");
-    Response login = sayAndMakeRequest(...);
+    Response response = sayAndMakeRequest(
+        Request.GET().url(testServerUrl().path("/api/articles")));
 
-    // Step 3: Update profile
-    sayNextSection("Step 3: Profile Updates");
-    Response update = sayAndMakeRequest(...);
+    sayAndAssertThat("200 OK", response.httpStatus(), equalTo(200));
 
-    // Step 4: Query data
-    sayNextSection("Step 4: Data Retrieval");
-    Response query = sayAndMakeRequest(...);
+    // Pattern matching: no explicit cast
+    Object rawPayload = response.payloadAsString();
+    if (rawPayload instanceof String body && !body.isBlank()) {
+        sayAndAssertThat("Payload is non-blank", true, equalTo(true));
+    }
+
+    ArticlesDto dto = response.payloadAs(ArticlesDto.class);
+
+    // Map to ArticleView records
+    List<ArticleView> views = dto.articles.stream()
+        .map(a -> new ArticleView(a.id, a.title))
+        .toList();
+
+    // Record pattern deconstruction with guards
+    var summary = new StringBuilder();
+    for (ArticleView view : views) {
+        String label = switch (view) {
+            case ArticleView(var id, var title) when title.length() > 20 ->
+                "long-title #" + id;
+            case ArticleView(var id, var _) ->
+                "short-title #" + id;
+        };
+        summary.append(label).append("; ");
+    }
+
+    sayAndAssertThat("All articles processed",
+        views.size(), equalTo(3));
 }
 ```
 
-**Features:**
-- Multiple sections per test
-- Logical flow of operations
-- Shows before/after states
-- Demonstrates actual use cases
+**Benefits:**
+- No redundant variable declarations
+- Guards (when clauses) enable conditional logic
+- Compiler ensures all patterns are covered
 
-**See:** `doctester-integration-test/src/test/java/controllers/docs/AuthenticationDocTest.java`
+**See:** `Java25DocTest.java` (testPatternMatchingAndRecordPatterns test)
 
 ---
 
-## Generated Output
+### 6. SequencedCollections — Intent-Clear API Access
 
-DocTester generates **beautiful HTML documentation** in `target/site/doctester/`:
+**Problem:** Getting the first/last element requires index math or iteration.
+
+**Solution:** `SequencedCollection` adds `getFirst()` / `getLast()` / `reversed()`.
+
+```java
+// Before: unclear intent
+List<Article> articles = dto.articles;
+Article first = articles.get(0);           // Magic number
+Article last = articles.get(articles.size() - 1);  // Verbose
+
+// After: clear intent
+SequencedCollection<Article> articles = dto.articles;
+Article first = articles.getFirst();       // Clear, safe
+Article last = articles.getLast();         // Clear, safe
+```
+
+**In a DocTest:**
+
+```java
+@Test
+public void testSequencedCollections() {
+    sayNextSection("SequencedCollection for Ordered Article Access");
+
+    say("SequencedCollection.getFirst() / getLast() express intent clearly:");
+
+    Response response = sayAndMakeRequest(
+        Request.GET().url(testServerUrl().path("/api/articles")));
+
+    ArticlesDto dto = response.payloadAs(ArticlesDto.class);
+    SequencedCollection<Article> articles = dto.articles;
+
+    Article first = articles.getFirst();
+    Article last = articles.getLast();
+
+    sayAndAssertThat("First article has ID", first.id, notNullValue());
+    sayAndAssertThat("Last article has ID", last.id, notNullValue());
+    sayAndAssertThat("3 articles total", articles.size(), equalTo(3));
+}
+```
+
+**Benefits:**
+- No index bounds errors
+- Intent is explicit
+- Works with any ordered collection (List, Deque, etc.)
+
+**See:** `Java25DocTest.java` (testSequencedCollections test)
+
+---
+
+### 7. Switch Expressions — Functional, Exhaustive, No Default
+
+**Problem:** Switch statements are verbose, require careful `break` statements, don't return values cleanly.
+
+**Solution:** Switch expressions are functional, exhaustive, return values.
+
+```java
+// Before: switch statement (verbose, easy to forget break)
+String status;
+switch (code) {
+    case 200:
+    case 201:
+        status = "Success"; break;
+    case 400:
+        status = "Bad Request"; break;
+    case 500:
+        status = "Server Error"; break;
+    default:
+        status = "Unknown"; break;
+}
+
+// After: switch expression (functional, no default for sealed types)
+String status = switch (code) {
+    case 200, 201 -> "Success";
+    case 400 -> "Bad Request";
+    case 500 -> "Server Error";
+    default -> "Unknown";
+};
+```
+
+**In a DocTest:**
+
+```java
+@Test
+public void testSwitchExpressions() {
+    sayNextSection("Switch Expressions for HTTP Status Handling");
+
+    Response response = sayAndMakeRequest(
+        Request.GET().url(testServerUrl().path("/api/articles")));
+
+    String description = switch (response.httpStatus()) {
+        case 200, 201 -> "Success";
+        case 400 -> "Invalid request";
+        case 403 -> "Forbidden";
+        case 404 -> "Not found";
+        case 500, 502, 503 -> "Server error";
+        default -> "Unknown status";
+    };
+
+    sayAndAssertThat("Status description matches",
+        description, equalTo("Success"));
+}
+```
+
+**Benefits:**
+- No `break` bugs
+- Return values directly
+- Compiler ensures exhaustiveness (with sealed types)
+
+---
+
+### 8. Var Type Inference — Less Boilerplate
+
+**Problem:** Local variable declarations repeat the type name (redundant).
+
+**Solution:** `var` infers the type from the right-hand side.
+
+```java
+// Before: type name repeated
+List<ArticleDto> articles = response.payloadJsonAs(new TypeReference<List<ArticleDto>>(){});
+ArticleDto firstArticle = articles.get(0);
+String title = firstArticle.title;
+
+// After: var infers types (RHS is obvious)
+var articles = response.payloadJsonAs(new TypeReference<List<ArticleDto>>(){});
+var firstArticle = articles.get(0);
+var title = firstArticle.title;
+```
+
+**In a DocTest:**
+
+```java
+@Test
+public void testModernJavaIdioms() {
+    sayNextSection("var, Streams, and Method References");
+
+    say("Combine var type inference, method references, and streams:");
+
+    // var infers types from RHS
+    var titles = List.of("First article", "Second article");
+
+    for (var title : titles) {
+        var article = new ArticleDto();
+        article.title = title;
+        article.content = "Content for: " + title;
+
+        var resp = makeRequest(
+            Request.POST()
+                .url(testServerUrl().path("/api/articles"))
+                .contentTypeApplicationJson()
+                .payload(article));
+
+        sayAndAssertThat("Created: " + title,
+            resp.httpStatus(), equalTo(200));
+    }
+
+    var listResp = sayAndMakeRequest(
+        Request.GET().url(testServerUrl().path("/api/articles")));
+
+    var dto = listResp.payloadAs(ArticlesDto.class);
+    var returnedTitles = dto.articles.stream()
+        .map(a -> a.title)
+        .toList();
+
+    for (var expected : titles) {
+        sayAndAssertThat("Title present: " + expected,
+            returnedTitles.contains(expected), equalTo(true));
+    }
+}
+```
+
+**Benefits:**
+- Shorter, cleaner code
+- Type is obvious from context
+- IDE refactoring tools handle type changes
+
+**See:** `Java25DocTest.java` (testModernJavaIdioms test)
+
+---
+
+### 9. Optional — Explicit Null Handling
+
+**Problem:** Nullable fields in API responses cause NullPointerExceptions.
+
+**Solution:** `Optional` forces explicit null checks.
+
+```java
+// Before: implicit null risk
+String title = article.getTitle();
+if (title != null) {
+    // use title
+}
+
+// After: explicit, forced handling
+Optional<String> title = Optional.ofNullable(article.getTitle());
+title.ifPresent(t -> { /* use t */ });
+String value = title.orElseThrow();  // Fail loudly if missing
+```
+
+**In a DocTest:**
+
+```java
+@Test
+public void testOptionalForNullableFields() {
+    sayNextSection("Optional for Nullable Response Fields");
+
+    say("Wrap nullable response fields in Optional to avoid NullPointerExceptions:");
+
+    Response response = sayAndMakeRequest(
+        Request.GET().url(testServerUrl().path("/api/articles")));
+
+    ArticlesDto dto = response.payloadAs(ArticlesDto.class);
+
+    Optional<Long> firstId = dto.articles.stream()
+        .findFirst()
+        .map(a -> a.id);
+
+    sayAndAssertThat("First article has ID",
+        firstId.isPresent(), equalTo(true));
+
+    sayAndAssertThat("ID is positive",
+        firstId.orElseThrow() > 0, equalTo(true));
+}
+```
+
+**Benefits:**
+- Null checks are explicit and required
+- No surprise null pointers in production
+- Code is self-documenting
+
+**See:** `Java25DocTest.java` (testOptionalForNullableFields test)
+
+---
+
+## API Testing Features
+
+Beyond Java 25 features, DocTester excels at testing and documenting all aspects of APIs:
+
+### REST/HTTP APIs (JSON & XML)
+
+```java
+Response response = sayAndMakeRequest(
+    Request.POST()
+        .url(testServerUrl().path("/api/articles"))
+        .contentTypeApplicationJson()
+        .payload(articleDto));
+
+sayAndAssertThat("Created with 201",
+    response.httpStatus(), equalTo(201));
+```
+
+### File Uploads
+
+```java
+Response response = sayAndMakeRequest(
+    Request.POST()
+        .url(testServerUrl().path("/api/documents"))
+        .addFormParameter("title", "Q4 Report")
+        .addFileToUpload("file", new File("report.pdf")));
+```
+
+### Authentication & Cookies
+
+```java
+makeRequest(  // Silent login
+    Request.POST()
+        .url(testServerUrl().path("/login"))
+        .addFormParameter("username", "alice@example.com")
+        .addFormParameter("password", "secret"));
+
+Response response = sayAndMakeRequest(
+    Request.POST()
+        .url(testServerUrl().path("/api/articles"))
+        .payload(articleDto));  // Cookies auto-included
+```
+
+### Error Handling
+
+```java
+Response forbidden = sayAndMakeRequest(
+    Request.POST()
+        .url(testServerUrl().path("/api/articles"))
+        .payload(articleDto));
+
+sayAndAssertThat("Unauthenticated write returns 403",
+    forbidden.httpStatus(), equalTo(403));
+```
+
+### Query Parameters
+
+```java
+Response response = sayAndMakeRequest(
+    Request.GET()
+        .url(testServerUrl()
+            .path("/api/articles")
+            .addQueryParameter("page", "2")
+            .addQueryParameter("limit", "10")));
+```
+
+---
+
+## Core API Reference
+
+### DocTester Methods
+
+| Method | Purpose |
+|--------|---------|
+| `say(String)` | Render paragraph text |
+| `sayNextSection(String)` | Render section heading |
+| `sayRaw(String)` | Inject raw HTML |
+| `sayAndMakeRequest(Request)` | Execute HTTP and document |
+| `makeRequest(Request)` | Execute HTTP silently |
+| `sayAndAssertThat(String, T, Matcher)` | Assert and document result |
+
+### Annotations for Declarative Documentation
+
+```java
+@DocSection("Creating Users")
+@DocDescription({"POST /api/users creates a new user."})
+@DocNote({"Usernames must be unique."})
+@DocWarning({"Don't send passwords in plain text."})
+@DocCode(value = {
+    "var user = new User(\"alice\", \"alice@example.com\");",
+    "Response r = sayAndMakeRequest(Request.POST()...)"
+}, language = "java")
+@Test
+public void testCreateUser() {
+    // Test code
+}
+```
+
+### Request Builder
+
+```java
+Request.GET()      // or POST, PUT, PATCH, DELETE, HEAD
+    .url(Url)
+    .contentTypeApplicationJson()
+    .addHeader(String, String)
+    .addFormParameter(String, String)
+    .addFileToUpload(String, File)
+    .payload(Object)
+    .followRedirects(boolean)
+```
+
+### Response Inspector
+
+```java
+response.httpStatus()           // int
+response.payload()              // byte[]
+response.payloadAsString()      // String
+response.payloadAs(Class)       // T (auto-detect JSON/XML)
+response.payloadJsonAs(Class)   // T (force JSON)
+response.payloadXmlAs(Class)    // T (force XML)
+response.headers()              // Map<String, String>
+```
+
+---
+
+## Generated Documentation
+
+DocTester generates per-test-class HTML in `target/site/doctester/`:
 
 ```
 target/site/doctester/
-├── index.html                                    # Landing page with links to all docs
-├── com.example.JsonApiDocTest.html              # Per-test-class documentation
-├── com.example.XmlApiDocTest.html
-├── bootstrap/
-│   ├── css/bootstrap.min.css
-│   └── js/bootstrap.min.js
-├── jquery/jquery-1.9.0.min.js
-└── custom_doctester_stylesheet.css              # Optional custom CSS
+├── index.html                          # Landing page
+├── controllers.docs.Java25DocTest.html # Per-test documentation
+├── assets/bootstrap/3.0.0/
+└── jquery/1.9.0/
 ```
 
-### Example Panels Generated
+Each test produces:
+- **Request panel** — HTTP method, URL, headers, cookies, body (formatted)
+- **Response panel** — Status, headers, body (formatted), Content-Type
+- **Assertion panel** — Green (pass) or red (fail) with message
+- **Narrative text** — Paragraphs explaining behavior
+- **Code blocks** — Syntax-highlighted examples
+- **Tables** — Field documentation, schemas
 
-Each panel shows:
-
-| Type | Content |
-|------|---------|
-| **Request** | HTTP method, URL, headers, cookies, body (formatted) |
-| **Response** | Status code, headers, body (formatted), Content-Type |
-| **Assertion** | Green/red box with message and matcher result |
-| **Narrative** | Prose paragraphs explaining behavior |
-| **Table** | Custom HTML (field documentation, schemas) |
-| **Code** | Syntax-highlighted example code |
+**Example:** Open `java25doctests/controllers.docs.Java25DocTest.html` in a browser to see all of the above.
 
 ---
 
@@ -678,7 +733,6 @@ Each panel shows:
 ```java
 import org.r10r.doctester.DocTester;
 import org.r10r.doctester.testbrowser.Request;
-import org.r10r.doctester.testbrowser.Response;
 import org.r10r.doctester.testbrowser.Url;
 import org.junit.Test;
 import org.junit.AfterClass;
@@ -697,166 +751,77 @@ public class MyApiDocTest extends DocTester {
         sayNextSection("Fetching Articles");
         say("GET /api/articles returns a list of articles.");
 
-        Response response = sayAndMakeRequest(
+        var response = sayAndMakeRequest(
             Request.GET()
                 .url(testServerUrl().path("/api/articles")));
 
-        sayAndAssertThat("Status is 200 OK",
+        sayAndAssertThat("Status is 200",
             response.httpStatus(), equalTo(200));
     }
 
     @AfterClass
     public static void finish() {
-        finishDocTest();  // Generate index.html
+        finishDocTest();
     }
 }
 ```
 
-### 2. Build & Run Tests
+### 2. Run Tests
 
 ```bash
 mvnd clean verify
 ```
 
-### 3. View Documentation
+### 3. View Docs
 
-Open `target/site/doctester/index.html` in a browser.
-
----
-
-## Core API Reference
-
-### DocTester Methods
-
-| Method | Purpose |
-|--------|---------|
-| `say(String)` | Render a paragraph |
-| `sayNextSection(String)` | Render a section heading (H1) |
-| `sayRaw(String)` | Embed raw HTML |
-| `sayAndMakeRequest(Request)` | Execute HTTP request and document |
-| `makeRequest(Request)` | Execute HTTP request (silent, no doc) |
-| `sayAndAssertThat(String, T, Matcher)` | Assert with documentation |
-| `sayAndGetCookies()` | Retrieve all cookies and document |
-| `sayAndGetCookieWithName(String)` | Get named cookie and document |
-| `getCookies()` | Get all cookies (silent) |
-| `getCookieWithName(String)` | Get named cookie (silent) |
-| `clearCookies()` | Clear cookie jar |
-| `testServerUrl()` | Override to set server URL |
-| `finishDocTest()` | Generate index.html (call in @AfterClass) |
-
-### Request Builder
-
-```java
-Request.GET()           // HEAD, GET, DELETE, POST, PUT, PATCH
-    .url(Url)
-    .addHeader(String, String)
-    .addFormParameter(String, String)
-    .contentTypeApplicationJson()
-    .contentTypeApplicationXml()
-    .payload(Object)
-    .addFileToUpload(String, File)
-    .followRedirects(boolean)
-```
-
-### Response Object
-
-```java
-response.httpStatus()           // int
-response.payload()              // byte[]
-response.payloadAsString()      // String
-response.payloadAsPrettyString()// String (formatted JSON/XML)
-response.payloadAs(Class)       // T (auto-detect JSON/XML)
-response.payloadJsonAs(Class)   // T (force JSON)
-response.payloadXmlAs(Class)    // T (force XML)
-response.headers()              // Map<String, String>
-```
-
-### Annotations
-
-```java
-@DocSection("Title")                        // Section heading
-@DocDescription({"Line 1", "Line 2"})      // Narrative paragraphs
-@DocNote({"Info 1", "Info 2"})             // Info callout boxes
-@DocWarning({"Warning 1", "Warning 2"})    // Warning callout boxes
-@DocCode(value = {"Code"}, language="java") // Code blocks
-```
-
----
-
-## Advanced Features
-
-### Custom Test Browser
-
-```java
-public class MyDocTest extends DocTester {
-    @Override
-    public TestBrowser getTestBrowser() {
-        return new MyCustomTestBrowser();
-    }
-}
-```
-
-### Custom Render Machine
-
-```java
-public class MyDocTest extends DocTester {
-    @Override
-    public RenderMachine getRenderMachine() {
-        return new MyCustomRenderMachine();
-    }
-}
-```
-
-### Custom CSS Styling
-
-Place a file in `src/test/resources/custom_doctester_stylesheet.css`:
-
-```css
-body {
-    background-color: #f5f5f5;
-}
-
-a.navbar-brand {
-    color: #F39300 !important;
-}
-
-.panel-heading {
-    background-color: #004e89;
-}
+```bash
+open target/site/doctester/index.html
 ```
 
 ---
 
 ## Architecture
 
-DocTester's architecture consists of three layers:
+**Three-layer design:**
 
-**Request Layer** (`testbrowser/`)
-- `Request` — fluent HTTP request builder
-- `Url` — fluent URL builder
-- `HttpConstants` — canonical headers and content-types
-
-**Execution Layer** (`TestBrowserImpl`)
-- Wraps Apache HttpComponents 4.5
-- Manages cookie jar
-- Handles multipart uploads
-- Serializes/deserializes payloads (Jackson)
-
-**Documentation Layer** (`rendermachine/`)
-- `RenderMachine` — captures all `say*` calls
-- `RenderMachineImpl` — generates Bootstrap HTML
-- Generates index page linking all tests
+1. **Request Layer** (`testbrowser/`) — Fluent HTTP builders
+2. **Execution Layer** (`TestBrowserImpl`) — Apache HttpClient, cookie management
+3. **Documentation Layer** (`rendermachine/`) — Bootstrap HTML generation
 
 ---
 
-## Configuration
+## Java 25 Requirements
 
-### System Requirements
-- Java 25 (or 21+)
-- Maven 4+
-- JUnit 4.12+
+- **Java 25 LTS** (openjdk)
+- **Maven 4.0.0-rc-5+** (or `mvnd` daemon)
+- **Compile flag:** `--enable-preview` (baked into maven.config)
 
-### Dependencies
+### Verification
+
+```bash
+java -version         # openjdk version "25.0.2"
+mvnd --version        # Maven 4.0.0-rc-5
+echo $JAVA_HOME       # /usr/lib/jvm/java-25-openjdk-amd64
+```
+
+---
+
+## Running All DocTests
+
+```bash
+# Build and test everything
+mvnd clean verify
+
+# Run specific DocTest
+mvnd test -pl doctester-integration-test -Dtest=Java25DocTest
+
+# View generated docs
+open doctester-integration-test/target/site/doctester/index.html
+```
+
+---
+
+## Dependencies
 
 ```xml
 <dependency>
@@ -872,83 +837,81 @@ DocTester's architecture consists of three layers:
     <version>4.12</version>
     <scope>test</scope>
 </dependency>
-
-<!-- HTTP Client (included) -->
-<dependency>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpclient</artifactId>
-    <version>4.5</version>
-</dependency>
-
-<!-- JSON/XML (included) -->
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-core</artifactId>
-    <version>2.5.4</version>
-</dependency>
 ```
 
 ---
 
-## Troubleshooting
+## Chaos Testing with Virtual Threads
 
-| Problem | Solution |
-|---------|----------|
-| No HTML generated | Call `finishDocTest()` in `@AfterClass` |
-| Wrong URL | Override `testServerUrl()` in your test class |
-| Cookies not persisting | Ensure subsequent requests are in same @Test method |
-| Content-Type detection fails | Explicitly use `payloadJsonAs()` or `payloadXmlAs()` |
-| File upload fails | File must exist; don't call `contentTypeApplicationJson()` |
-| Assertions show red | Test assertion failed; fix assertion or code |
+DocTester includes chaos testing framework using WireMock and virtual threads:
+
+```java
+@Test
+void concurrentChaosWithVirtualThreads() throws InterruptedException {
+    int threads = 20;
+    AtomicInteger successes = new AtomicInteger(0);
+    CountDownLatch latch = new CountDownLatch(threads);
+
+    try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+        for (int i = 0; i < threads; i++) {
+            final int idx = i;
+            executor.submit(() -> {
+                var browser = new TestBrowserImpl();
+                Response r = browser.makeRequest(...);
+                if (r.httpStatus == 200) successes.incrementAndGet();
+                latch.countDown();
+            });
+        }
+    }
+
+    latch.await(10, TimeUnit.SECONDS);
+    assertEquals(threads, successes.get());
+}
+```
+
+**See:** `DocTesterChaosTest.java`
 
 ---
 
 ## Examples
 
-**Complete examples** available in the integration test module:
+Complete examples in `doctester-integration-test/src/test/java/controllers/docs/`:
 
-- `JsonApiDocTest` — JSON endpoints, deserialization, assertions
-- `XmlApiDocTest` — XML support, format comparison
-- `FileUploadDocTest` — multipart file uploads
-- `AuthenticationDocTest` — session cookies, login flows
-- `ErrorHandlingDocTest` — HTTP error codes, status validation
-- `AccessControlDocTest` — role-based access, permissions
-- `Java25DocTest` — Java 25 features, annotations, records
+- `Java25DocTest.java` — Records, sealed classes, pattern matching, text blocks, SequencedCollections
+- `FileUploadDocTest.java` — Multipart file uploads
+- `AuthenticationDocTest.java` — Session cookies, login flows
+- `ErrorHandlingDocTest.java` — HTTP error codes
+- `AccessControlDocTest.java` — Role-based access control
+- `JsonApiDocTest.java` — JSON serialization/deserialization
+- `XmlApiDocTest.java` — XML support
 
-Run integration tests:
+**Run all examples:**
+
 ```bash
-mvnd clean verify -pl doctester-integration-test
-```
-
-View generated docs:
-```bash
-open doctester-integration-test/target/site/doctester/index.html
+mvnd verify -pl doctester-integration-test
 ```
 
 ---
 
 ## Contributing
 
-Contributions are welcome! Please:
+Contributions welcome! Please:
 
 1. Write tests for your feature
-2. Document code with Javadoc
-3. Follow Sun Java code style (4 spaces, UTF-8)
+2. Document with Javadoc
+3. Use Sun Java code style (4 spaces, UTF-8)
 4. Update this README
-5. Add your name to `TEAM.md`
-
-Then submit a pull request.
+5. Submit a pull request
 
 ---
 
 ## License
 
-DocTester is licensed under the **Apache License 2.0**. See `LICENSE.md` for details.
+Apache License 2.0. See `LICENSE.md`.
 
 ---
 
 ## Support
 
-For issues, questions, or feature requests, visit:
-- **GitHub Issues:** https://github.com/r10r-org/doctester/issues
-- **GitHub Discussions:** https://github.com/r10r-org/doctester/discussions
+- **Issues:** https://github.com/r10r-org/doctester/issues
+- **Discussions:** https://github.com/r10r-org/doctester/discussions
